--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@
     color: #FFFFFF !important;
 }
 
-.nav-item:hover {
-    transition: .5s;
-    border-bottom: 1px rgba(255, 255, 255) solid;
-}
 
 .navbar-toggler {
     border: none !important;
@@ -50,11 +46,57 @@
 
 .nav-item {
     list-style-type: none;
-    border-bottom: 1px transparent solid;
 }
 
 .navbar-toggler-icon {
     margin-top: -3px;
+}
+
+@media(max-width: 1025px) {
+    .section-3 {
+        overflow-x: scroll;
+        overflow-y: scroll;
+        max-width: 100%;
+        height: 100px;
+
+    }
+
+    *::-webkit-scrollbar {
+        height: 0px;
+        width: 0px;
+    }
+
+    .flex-1-div-sec-3 {
+        flex-wrap: nowrap !important;
+        margin-left: -14px;
+    }
+
+    .div-samokat {
+        width: 100px !important;
+        height: 100px !important;
+    }
+
+
+    .img-samokat {
+        width: 58px !important;
+        height: 58px !important;
+        margin-top: 12px !important;
+    }
+
+    .p-samokat {
+        font-weight: 600 !important;
+        font-size: 15px !important;
+        line-height: 119.3% !important;
+        margin-top: 7px;
+        width: 100px !important;
+    }
+
+    .img-hat {
+        height: 35px !important;
+        margin-top: 34px !important;
+    }
+
+
 }
 
 @media (max-width: 992px) {
@@ -71,8 +113,8 @@
         margin-top: 10px;
     }
 
-    .nav-link-ul {
-        border-bottom: 1px rgba(255, 255, 255, 0.345) solid;
+    .human-inf-div {
+        margin-right: 0px !important;
     }
 
 }
@@ -105,7 +147,7 @@
 
     .nav-item {
         list-style-type: none;
-        border-bottom: 1px transparent solid;
+
     }
 
     .img-logo-nav {
@@ -117,14 +159,14 @@
         left: 0;
         right: 0;
         position: absolute;
-
         margin-top: -23px;
     }
 
     .nav-link {
         color: #323941 !important;
-        font-size: 15px;
-        line-height: 12px;
+        font-size: 18px;
+        line-height: 15px;
+        font-weight: 500;
     }
 
     .img-white-none-adapt,
@@ -178,10 +220,6 @@
         border-bottom: none;
     }
 
-    .nav-item {
-        border-bottom: none;
-    }
-
     .nav-link-ul {
         padding-left: 13px !important;
     }
@@ -214,7 +252,7 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-    margin-right: 0;
+    margin-right: 70px;
 }
 
 .img-human {
